--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -66,7 +66,7 @@
             
             <div class="row" th:each = "row, y : ${s}">
                 <button th:each = "cell, x : ${row}"
-                    th:class="${'c'+ cell}"
+                    th:class="${'c'+ cell + ' ' + t[0][0]}"
                     th:value="${x.index + ',' + y.index}" 
                     th:disabled="${cell + '' != ' '  }"
                     name="pos"
